# study

./: .gitignore  .release-please-manifest.json  mise.toml
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e_tests.yaml  frontend-tests.yaml  release-please.yaml  update-gitops.yaml
kubernetes/: pyproject.toml  setup_cluster_minimal
scripts/: setup_project
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/backend/: main.py
src/backend/src/data/: sessions.csv
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
