[project]
name = "study-tracker-frontend"
version = "0.1.2"
description = "Frontend for DevOps Study Tracker application"
readme = "README.md"
authors = [{ name = "Herve Delaunay", email = "hdelaunay.dev@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "requests>=2.32.5",
]

[project.scripts]
study-tracker-frontend = "frontend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "responses>=0.25.8",
    "ruff>=0.14.2",
]
